configs/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-meet
  labels:
    app.kubernetes.io/name: jitsi-meet
    app.kubernetes.io/instance: jitsi
    app.kubernetes.io/component: web
  annotations:
    kubernetes.io/ingress.class:  "nginx"
spec:
  # This is the TLS settings for Nginx Ingress
  tls:
    # This shall be the secret that created at begging of the Installation guide
    - secretName: meetmo-cluster-ssl # TODO: change it
      # This is domain for the web service
      hosts:
      - media0.cluster.meetmo.io # TODO: Change it
      - media1.cluster.meetmo.io # Application server for LiveKit
      - media1ws.cluster.meetmo.io # Media server for LiveKit
  
  rules:
      # This is also the domain of your web service
      # WARNING: The host in the tls part and the host in this part shall match.
    
    - host: media0.cluster.meetmo.io # TODO: Change it
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # This will be the service name of the Jitsi web deployment.
                # If you change this part of the Jitsi deployment, then change this
                # part too.
                name: jitsi-meet
                port:
                  number: 80
    
    - host: media1.cluster.meetmo.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lk-react
              port:
                number: 443
    
    - host: media1ws.cluster.meetmo.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lk-server
              port:
                number: 443
